--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="./Resume.html">resume</a>
-    <a href="./lists.html">list</a>
+    <a href="./list.html">list</a>
     <a href="family.html">family</a>
     <a href="./Tables.htmltables"></a>
     <a href="./www.project.html">www project</a>
